--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -700,7 +700,22 @@ Buy: dp[i][k][1] = max(dp[i+1][k][1], dp[i+1][k][0] - prices[i])
 Sell: dp[i][k][0] = max(dp[i+1][k][0], dp[i+1][k-1][1] + prices[i])
 ```
 
-这里的dp指的是在第`i`天，有`k`次交易机会，状态为 1（可以买）或 0（可以卖）会得到的收益
+这里的dp指的是在第`i`天，有`k`次交易机会，状态为 1（可以买）或 0（可以卖）会得到的收益。
+
+下面是另一种规划方式的代码，此处的 `dp[i][j][s]` 表示的是到第 i 天，最多进行 j 次交易，状态为 s 时的收益 [188. 买卖股票的最佳时机 IV - 力扣（LeetCode）](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iv/description/)
+
+```python
+def maxProfit(k: int, prices: List[int]) -> int:
+	n = len(prices)
+	dp = [[[0, 0] for _ in range(k+1)] for _ in range(n)]
+	for j in range(1, k+1):
+		dp[0][j][1] = -prices[0]
+	for i in range(1, n):
+		for j in range(1, k+1):
+			dp[i][j][0] = max(dp[i-1][j][0], dp[i-1][j][1] + prices[i])
+			dp[i][j][1] = max(dp[i-1][j][1], dp[i-1][j-1][0] - prices[i])
+	return dp[-1][k][0]
+```
 
 
 ### 在一个可以循环移位的序列中找到最大和子序列
@@ -4666,6 +4681,7 @@ def combinationSum(candidates, target: int):
 
 
 如果存在重复的数字，并且待选的数字只能选一次
+
 [40. 组合总和 II - 力扣（LeetCode）](https://leetcode.cn/problems/combination-sum-ii/description/)
 
 一种做法是先对candidate进行排序，在选择时跳过重复元素
@@ -7737,7 +7753,66 @@ def zigzagLevelOrder(root: Optional[TreeNode]) -> List[List[int]]:
 ```
 
 
+### 生成 1到 n的二叉搜索树
 
+[95. 不同的二叉搜索树 II - 力扣（LeetCode）](https://leetcode.cn/problems/unique-binary-search-trees-ii/description/)
+
+对于1-n的二叉搜索树，可以在 1 - n 之间任意选择 i 作为根节点，然后 `[1,i-1]` 作为左子树，`[i+1, n]` 作为右子树
+
+```python
+def generateTrees(n: int):
+	def dfs(start, end):  # start 起点，end 终点
+		if start > end:
+			return [None,]
+		allTrees = []
+
+		for i in range(start, end+1):  # 在 [start, end] 中遍历根节点
+			leftTrees = dfs(start, i-1)
+			rightTrees = dfs(i+1, end)
+
+			for l in leftTrees:  # 遍历左右子树
+				for r in rightTrees:
+					currTree = TreeNode(i)
+					currTree.left = l
+					currTree.right = r
+					allTrees.append(currTree)
+		return allTrees
+	return dfs(1, n)
+```
+
+
+这道题可以用动态规划的方法求解
+
+首先 `dp[i]` 表示 `[1,2,3,...,i]` 这些值构成的二叉搜索树，对于每个 `dp[i]`，需要遍历之前的 `j`，得到 `dp[j-1]` 和 `dp[i-j]`，这里的 `dp[i-j]` 需要加上一个偏差 `j` 以满足要求。如 `[1,100]` 构建二叉搜索树，当遍历到 98 时，需要使用 `[1,97]` 构建左子树，`[99,100]` 构建右子树
+
+```python
+def generateTrees(n: int):
+	dp = [[] for _ in range(n+1)]
+	dp[0] = [None]
+	dp[1] = [TreeNode(1)]
+
+	def copy_tree(node, offset):
+		if node is None:
+			return None
+		
+		root = TreeNode(node.val + offset)
+		root.left = copy_tree(node.left, offset)
+		root.right = copy_tree(node.right, offset)
+		return root
+	
+	for i in range(2, n+1):
+		for j in range(1, i+1):
+			left = j - 1
+			right = i - j
+			# 遍历左右子树
+			for l in dp[j-1]:
+				for r in dp[i-j]:
+					root = TreeNode(j)
+					root.left = l
+					root.right = copy_tree(r, j)
+					dp[i].append(root)
+	return dp[n]
+```
 ### 二叉树中的最大路径和
 
 [124. 二叉树中的最大路径和 - 力扣（LeetCode）](https://leetcode.cn/problems/binary-tree-maximum-path-sum/)
@@ -10328,6 +10403,36 @@ def solve_dp(arr, target):
 ```
 
 
+### 一和零
+
+[474. 一和零 - 力扣（LeetCode）](https://leetcode.cn/problems/ones-and-zeroes/description/)
+
+三维的背包问题
+
+令 `dp[i][j][k]`表示在前 `i` 个字符串中，使用 `j` 个 0 和 `k` 个 1 的情况下最多的字符串数量
+
+如果对于第 `i` 个字符串可以放下，则分成选择该物品或者不选择该字符串，有 `dp[i][j][k] = max(dp[i-1][j][k], dp[i-1][j-zero][k-ones]+1`
+
+如果第 `i` 个字符串不能放下，则有  `dp[i][j][k] = dp[i-1][j][k]`
+
+```python
+def findMaxForm(strs: List[str], m: int, n: int) -> int:
+	l = len(strs)
+	nums = []
+	for s in strs:
+		nums.append((s.count('0'), s.count('1')))
+	dp = [[[0 for _ in range(n+1)] for _ in range(m+1)] for _ in range(l+1)]
+	
+	for i in range(1, l+1):
+		for j in range(m+1):
+			for k in range(n+1):
+				if nums[i-1][0] <= j and nums[i-1][1]<=k:
+					dp[i][j][k] = max(dp[i-1][j][k], dp[i-1][j-nums[i-1][0]][k-nums[i-1][1]] + 1)
+				else:
+					dp[i][j][k] = dp[i-1][j][k]
+	return dp[l][m][n]
+```
+
 ### 最长回文子序列
 
 [516. 最长回文子序列 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-palindromic-subsequence/description/)
@@ -10355,7 +10460,6 @@ def longestPalindromeSubseq(s: str) -> int:
 				dp[i][j] = max(dp[i+1][j], dp[i][j-1])
 	return dp[0][-1]
 ```
-
 
 还有另一种方法，将字符串翻转过来，求两个字符串之间的最长公共子序列。
 
@@ -10528,6 +10632,7 @@ def solve(cost):
 
 [Coin Change - Count Ways to Make Sum - GeeksforGeeks](https://www.geeksforgeeks.org/coin-change-dp-7/)
 
+
 ```python
 def count_dp(coins, sum):
     n1 = len(coins) + 1
@@ -10548,6 +10653,23 @@ def count_dp(coins, sum):
     return dp[len(coins)][sum]
 ```
 
+[518. 零钱兑换 II - 力扣（LeetCode）](https://leetcode.cn/problems/coin-change-ii/description/)
+
+该问题还可以优化空间，
+
+```python
+def change(amount: int, coins: List[int]) -> int:
+	dp = [0] * (amount + 1)
+	dp[0] = 1
+	for c in coins:
+		for i in range(c, amount+1):
+			dp[i] += dp[i-c]
+	return dp[-1]
+```
+
+注意需要在外侧循环中迭代硬币，否则会出现重复的方案。先迭代硬币，相当于默认在该方案中包含了该硬币，这样可以避免重复的方案。
+
+将内外循环反过来，就能找到下标不同的方案了。
 
 ### 最长公共子序列
 
@@ -10589,6 +10711,10 @@ def lcs_dp2(s1, s2):
             prev = temp
     return dp[n2]
 ```
+
+最长公共子序列会以其它形式出现，如不相交的连线 [1035. 不相交的线 - 力扣（LeetCode）](https://leetcode.cn/problems/uncrossed-lines/description/)
+
+还有让字符串成为回文串的最少插入次数 [1312. 让字符串成为回文串的最少插入次数 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-insertion-steps-to-make-a-string-palindrome/description/) 该问题可以改为找到原字符串的最长回文子字符串，或者是原字符串和原字符串的逆转字符串的最长公共子序列。
 
 
 ### 两个字符串的最小ASCII删除和
@@ -10833,6 +10959,27 @@ def solve_dp(digits):
     return dp[0]
 ```
 
+从前到后，并且优化空间
+
+```python
+def numDecodings(s: str) -> int:
+	n = len(s)
+	if s[0] == "0": return 0
+	f0 = 1  # dp[i-2]
+	f1 = 1  # dp[i-1]
+	for i in range(1, n+1):
+		f = 0
+		if s[i-1] != "0":  # 当前的字母独立分组
+			f = f1
+		if (s[i-2] > "2" and s[i-1] == "0") or (s[i-2] == "0" and s[i-1] == "0"):
+			return 0
+		# 当前字母和前一个字母分在一起
+		if i > 1 and (s[i-2] == "1" or (s[i-2] == "2" and "0" <= s[i-1] <= "6")):
+			f += f0   
+		f0, f1 = f1, f
+	return f1
+```
+
 
 ### k 次置换的数量
 
@@ -10922,9 +11069,94 @@ def solve(nums):
         if nums[i] > stack[-1]:
             stack.append(nums[i])
         else:
-            lb = bisect_left(stack, nums[i])
+            lb = bisect_left(stack, nums[i])  # 找到更小的位置
             stack[lb] = nums[i]
     return len(stack)
+```
+
+如果不要求严格递增，则为
+
+```python
+from bisect import bisect_right
+def solve(nums):
+    stack = []
+    n = len(nums)
+    stack.append(nums[0])
+    for i in range(1, n):
+        if nums[i] >= stack[-1]:
+            stack.append(nums[i])
+        else:
+            lb = bisect_right(stack, nums[i])  # 找到更大的位置
+            stack[lb] = nums[i]
+    return len(stack)
+```
+
+如果需要得到每个点对应的最长增长子序列的长度，则如下所示
+
+```python
+from bisect import bisect_left
+def solve(nums):
+    stack = []
+    n = len(nums)
+    stack.append(nums[0])
+    dp = [1]
+    for i in range(1, n):
+        if nums[i] > stack[-1]:
+            stack.append(nums[i])
+            dp.append(len(stack))
+        else:
+            lb = bisect_left(stack, nums[i])  # 找到更小的位置
+	        dp.append(lb+1)
+            stack[lb] = nums[i]
+    return len(stack)
+```
+
+
+### 最长定差子序列
+
+[1218. 最长定差子序列 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-arithmetic-subsequence-of-given-difference/description/)
+
+用一个字典作为dp，从前向后遍历，`dp[v]=dp[v-diff]+1`
+
+```python
+def longestSubsequence(arr, difference: int) -> int:
+	from collections import defaultdict
+	dp = defaultdict(int)
+	for v in arr:
+		dp[v] = dp[v-difference] + 1
+	
+	return max(dp.values())
+```
+
+
+### 俄罗斯套娃信封问题
+
+[354. 俄罗斯套娃信封问题 - 力扣（LeetCode）](https://leetcode.cn/problems/russian-doll-envelopes/description/)
+
+给你一个二维整数数组 `envelopes` ，其中 `envelopes[i] = [wi, hi]` ，表示第 `i` 个信封的宽度和高度。
+
+当另一个信封的宽度和高度都比这个信封大的时候，这个信封就可以放进另一个信封里，如同俄罗斯套娃一样。
+
+请计算 **最多能有多少个** 信封能组成一组“俄罗斯套娃”信封（即可以把一个信封放到另一个信封里面）。
+
+
+首先需要对数组进行排序，排序的原则是首个元素按照大小顺序排列，第二个元素反向排列，排好之后。为了保证不超时，使用二分查找的方法根据第二个元素找到符合要求的子序列
+
+```python
+def maxEnvelopes(envelopes: List[List[int]]) -> int:
+	from bisect import bisect_left
+
+	envelopes.sort(key = lambda x: (x[0], -x[1]))
+
+	n = len(envelopes)
+	stack = [envelopes[0][1]]
+	for i in range(1, n):
+		if stack[-1] < envelopes[i][1]:
+			stack.append(envelopes[i][1])
+		else:
+			idx = bisect_left(stack, envelopes[i][1])  # 找到更小的元素对应的位置
+			stack[idx] = envelopes[i][1]
+	return len(stack)
 ```
 
 
@@ -10988,7 +11220,7 @@ def solve(jobs):
     ans = _solve(jobs, 0, -1)
 ```
 
-在使用memo来减小时间复杂度时，需要注意如果将memo设置为二维矩阵，或耗费大量存储空间，考虑如下的实现方法，只在能选择工作时返回memo中存储的值
+在使用memo来减小时间复杂度时，需要注意如果将memo设置为二维矩阵，会耗费大量存储空间，考虑如下的实现方法，只在能选择工作时返回memo中存储的值
 
 ```python
 def maxProfitRecur(jobs, ind, last, memo):
@@ -11387,7 +11619,118 @@ def deleteAndEarn(nums: List[int]) -> int:
 ```
 
 
+### 树形打家劫舍
 
+[337. 打家劫舍 III - 力扣（LeetCode）](https://leetcode.cn/problems/house-robber-iii/description/)
+
+该题可以通过记忆化回溯解决
+
+```python
+def rob(root: Optional[TreeNode]) -> int:
+	memo = {}
+	def dfs(node, memo):
+		if node is None:
+			return 0
+		
+		if node in memo:
+			return memo[node]
+		
+		# 不偷该节点，则可获得的最大利润为左右节点之和
+		p1 = dfs(node.left, memo) + dfs(node.right, memo)
+
+		# 偷该节点，则可获得的最大利润为当前利润和子树的子树的利润之和
+		p2 = node.val
+		if node.left is not None:
+			p2 += dfs(node.left.left, memo) + dfs(node.left.right, memo)
+		
+		if node.right is not None:
+			p2 += dfs(node.right.left, memo) + dfs(node.right.right, memo)
+		
+		memo[node] = max(p1, p2)
+		return memo[node]
+	
+	v = dfs(root, memo)
+	return v
+```
+
+
+下面看一下动态规划的做法，首先用两个memo `f(o)` 记录选择 `o` 节点时，`o` 节点的子树上被选择的节点的最大权值和；`g(o)` 表示不选择 `o` 节点时，子树上的最大权值和。令 `l` 和 `r` 分别为左右子树
+
+有如下结论：
+
+选择`o`节点时的最大权值和等于不选择 `l` 和 `r` 节点时的最大权值和  `f(o) = g(l)+g(r)`  
+
+不选择`o`节点时的最大权值和等于是否选择 `l` 和 `r` 节点时的最大权值和：
+
+`g(o)=max(f(l), g(l))+max(f(r),g(r))`
+
+为了节约内存，可以使用两个变量替代 g 和 f。
+
+```python
+def rob(root: Optional[TreeNode]) -> int:
+	memo = {}
+	def dfs(node):
+		if node is None:
+			return [0,0]
+		
+		fl, gl = dfs(node.left)
+		fr, gr = dfs(node.right)
+
+		# 选择该节点时的最大权值和
+		fn = node.val + gl + gr
+		# 不选择该节点时的最大权值和
+		gn = max(fl, gl) + max(fr, gr)
+		return [fn, gn]
+	f, g = dfs(root)
+	return max(f, g)
+```
+
+
+### 解决智力问题
+
+[2140. 解决智力问题 - 力扣（LeetCode）](https://leetcode.cn/problems/solving-questions-with-brainpower/description/)
+
+打家劫舍的变形题，或者看成带权重的工作规划的变形题
+
+对于一个问题，如果不解决，则有 `dp[i]=dp[i+1]`，如果解决则有
+
+`dp[i] = points[i]+dp[i+brainpower[i]+1]`
+
+```python
+def mostPoints(questions: List[List[int]]) -> int:
+	n = len(questions)
+	
+	dp = [0] * (n+1)  # dp[i] 从 i 到 n-1的最大分数
+	res = 0
+	
+	for i in range(n-1, -1, -1):
+		e = min(i+questions[i][1]+1, n)
+		dp[i] = max(dp[i+1], questions[i][0] + dp[e])
+	return dp[0]
+```
+
+
+如果看成带权重的工作规划问题，则需要在开始时间中找到大于当前问题的结束时间的问题
+
+```python
+def mostPoints(questions: List[List[int]]) -> int:
+	from bisect import bisect_right
+	n = len(questions)
+	starts = [i for i in range(n)]
+	
+	dp = [0] * n  # dp[i] 从 i 到 n-1的最大分数
+	res = 0
+	
+	for i in range(n-1, -1, -1):
+		dp[i] = questions[i][0]  # 选择回答该问题
+		# 在开始时间中找到大于当前问题的结束时间
+		idx = bisect_right(starts, questions[i][1]+i, i+1)
+		if idx < n:
+			dp[i] += dp[idx]
+		if i != n-1:
+			dp[i] = max(dp[i], dp[i+1])
+	return dp[0]
+```
 ## 分治
 
 将长数据分成两部分进行计算
