--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -7627,6 +7627,81 @@ def copyRandomList(head):
 	return nodes[head]
 ```
 
+
+### LRU 缓存
+
+[146. LRU 缓存 - 力扣（LeetCode）](https://leetcode.cn/problems/lru-cache/description/)
+
+需要使用一个字典保存键对应的节点，节点以双向链表的方式给出，因为需要将最近访问的节点放在最开始。注意 `get` 和更新键值都属于访问，都需要将节点放在最开始
+
+```python
+class Node:
+
+    def __init__(self, key=0, value=0):
+        self.key = key
+        self.value = value
+        self.prev = None
+        self.next = None
+
+class LRUCache:
+
+    def __init__(self, capacity: int):
+        self.capacity = capacity
+        self.nc = 0
+        self.dummy = Node() 
+        self.cache = {}
+
+    def get(self, key: int) -> int:
+        if key in self.cache:
+            node = self.cache[key] # 取出节点
+            v = node.value
+            self.put_front(node)
+            return v
+        else:
+            return -1
+    
+    def put_front(self, node):
+        next = node.next  # 当前节点的下一个元素
+        prev = node.prev  # 当前节点的上一个元素
+        next.prev = prev
+        prev.next = next
+        
+        node.next = self.dummy.next
+        self.dummy.next.prev = node
+        self.dummy.next = node
+        node.prev = self.dummy   # 将节点放到最前面
+
+    def put(self, key: int, value: int) -> None:
+        if key in self.cache:
+            node = self.cache[key]
+            node.value = value
+            self.put_front(node)
+        else:
+            if self.nc >= self.capacity:  # 超出容量删除
+                old_node = self.dummy.prev
+                prev = old_node.prev
+                self.dummy.prev = prev
+                prev.next = self.dummy
+                del self.cache[old_node.key]
+            
+            node = Node(key, value)
+            next = self.dummy.next
+            if next is None:  # 初始情况
+                self.dummy.next = node
+                node.prev = self.dummy
+                self.dummy.prev = node
+                node.next = self.dummy
+            else:
+                node.next = next
+                next.prev = node
+                self.dummy.next = node
+                node.prev = self.dummy
+            
+            self.cache[key] = node
+            self.nc += 1
+```
+
+
 ## 树
 
 ### 四种遍历
@@ -8713,6 +8788,70 @@ B 树的一个节点（除了根节点）至少有 m / 2 - 1 个键，
 ### B+树
 
 [Introduction of B+ Tree - GeeksforGeeks](https://www.geeksforgeeks.org/introduction-of-b-tree/)
+
+
+### 二叉搜索树中第 k 小的数字
+
+[230. 二叉搜索树中第 K 小的元素 - 力扣（LeetCode）](https://leetcode.cn/problems/kth-smallest-element-in-a-bst/description/)
+
+在中序搜索时，标记已经搜索过的数字数量，在找到答案后就返回
+
+```python
+def kthSmallest(root: Optional[TreeNode], k: int) -> int:
+	self.res = 0
+	self.k = k
+	def inorder(root):
+		if root is None:
+			return
+		
+		inorder(root.left)
+		if self.k == 0: return
+		self.k -= 1
+		if self.k == 0: 
+			self.res = root.val 
+			return
+		inorder(root.right)
+	
+	inorder(root)
+	return self.res
+```
+
+
+如果需要多次查找不同的k，可以先计算每个根节点左右子树中节点的数量。在搜索时，如果k大于该节点左子树中节点的数量，则在右子树中搜索；相等则就是该节点；否则在左子树中寻找
+
+```python
+class MyBst:
+    def __init__(self, root: TreeNode):
+        self.root = root
+
+        # 统计以每个结点为根结点的子树的结点数，并存储在哈希表中
+        self._node_num = {}
+        self._count_node_num(root)
+
+    def kth_smallest(self, k: int):
+        """返回二叉搜索树中第k小的元素"""
+        node = self.root
+        while node:
+            left = self._get_node_num(node.left)
+            if left < k - 1:
+                node = node.right
+                k -= left + 1
+            elif left == k - 1:
+                return node.val
+            else:
+                node = node.left
+
+    def _count_node_num(self, node) -> int:
+        """统计以node为根结点的子树的结点数"""
+        if not node:
+            return 0
+        self._node_num[node] = 1 + self._count_node_num(node.left) + self._count_node_num(node.right)
+        return self._node_num[node]
+
+    def _get_node_num(self, node) -> int:
+        """获取以node为根结点的子树的结点数"""
+        return self._node_num[node] if node is not None else 0
+```
 
 
 ### 并查集
@@ -11731,6 +11870,227 @@ def mostPoints(questions: List[List[int]]) -> int:
 			dp[i] = max(dp[i], dp[i+1])
 	return dp[0]
 ```
+
+
+
+### 长度为3的不同回文子序列
+
+[1930. 长度为 3 的不同回文子序列 - 力扣（LeetCode）](https://leetcode.cn/problems/unique-length-3-palindromic-subsequences/description/)
+
+首先记录每个元素出现过的位置，然后遍历每个元素，如果该元素只出现一次，那么没有该元素构成的回文子序列，如果出现两次以上，找到最开始和最末尾出现的地方，然后用一个集合统计这个区间内所有的不同的元素，便是该元素在外侧构成的长度为3的回文子序列总数。
+
+```python
+def countPalindromicSubsequence(s: str) -> int:
+	from collections import defaultdict
+	n = len(s)
+	ans = 0
+	freq = defaultdict(list)
+	for i, sv in enumerate(s):
+		freq[ord(sv)-ord('a')].append(i)
+	
+	for i in range(26):
+		if i in freq:
+			if len(freq[i]) == 1:
+				continue
+			l = freq[i][0]
+			r = freq[i][-1]
+			if r - l < 2: # 中间没有其它元素
+				continue
+			charset = set()
+			for j in range(l+1, r):
+				charset.add(s[j])
+			ans += len(charset)
+	return ans
+```
+
+
+该问题存在一些变形的算法，如 k = 2 时，直接找到字符串中字符相同的字符对即可
+
+```python
+def solve(s):
+    from collections import defaultdict
+    cnt = defaultdict(int)
+    res = 0
+    for i in range(len(s)):
+        if cnt[ord(s[i])-ord('a')] == 1:  # 相同的字符串只统计一次
+            res += 1
+        cnt[ord(s[i])-ord('a')] += 1
+    return res
+```
+
+
+k = 4 时，此时一般为数字字符串，首先从后向前遍历，得到单个数字的出现次数和两个数字组合的出现次数。
+
+```python
+suf = [0] * 10
+suf2 = [0] * 100
+for d in map(int, reversed(s)):
+	for j, c in enumerate(suf):
+		suf2[d * 10 + j] += c  # suf2[d][j] += suf[j]
+	suf[d] += 1
+```
+
+然后从前向后遍历，同样构建单个数字和两个数字组合的出现次数，并且同时撤销后缀
+
+```python
+pre = [0] * 10
+pre2 = [0] * 100
+for d in map(int, s):
+	for j, c in enumerate(pre):
+		pre2[d * 10 + j] += c
+	pre[d] += 1
+	
+	suf[d] -= 1
+	for j, c in enumerate(suf):
+		suf2[d * 10 + j] -= c  # 撤销和 d 相关的后缀
+	# 枚举所有字符组合
+	ans += sum(c1 * c2 for c1, c2 in zip(pre2, suf2)) 
+```
+
+
+k = 5 时的计算过程基本类似，但是将更新前缀放在枚举字符组合之后
+
+```python
+def countPalindromes(s: str) -> int:
+	suf = [0] * 10
+	suf2 = [0] * 100
+	for d in map(int, reversed(s)):
+		for j, c in enumerate(suf):
+			suf2[d * 10 + j] += c
+		suf[d] += 1
+
+	ans = 0
+	pre = [0] * 10
+	pre2 = [0] * 100
+	for d in map(int, s):
+		suf[d] -= 1
+		for j, c in enumerate(suf):
+			suf2[d * 10 + j] -= c  # 撤销
+		ans += sum(c1 * c2 for c1, c2 in zip(pre2, suf2))  # 枚举所有字符组合
+		for j, c in enumerate(pre):
+			pre2[d * 10 + j] += c
+		pre[d] += 1
+	return ans % (10 ** 9 + 7)
+```
+
+
+### 回文子序列的个数
+
+如果允许重复，则有以下结论
+
+如果 `s[i]!=s[j]`，则计算不同时包含两端时的个数 `dp[i+1][j]+dp[i][j-1]-dp[i+1][j-1]`
+
+如果 `s[i]==s[j]`，则在不同时包含两端的基础上加上同时包含两端时的个数（`dp[i+1][j-1]+1`）
+
+```python
+def countPalindromicSubsequences(s: str) -> int:
+	n = len(s)
+	dp = [[0 for _ in range(n)] for _ in range(n)]
+
+	for i in range(n):
+		dp[i][i] = 1
+
+	for i in range(n-2, -1, -1):
+		for j in range(i+1, n):
+			if s[i] == s[j]:
+				dp[i][j] = dp[i+1][j] + dp[i][j-1] + 1
+			else:
+				dp[i][j] = dp[i+1][j] + dp[i][j-1] - dp[i+1][j-1]
+	return dp[0][n-1]
+```
+
+
+如果不允许重复，并且字符集合的数量较小，可以在dp数组中另外加上一维表示以该字符开始或结尾，即 `dp[x][i][j]` 表示字符串区间`s[i:j]` 中以字符 `x` 为开始和结尾的不同回文序列总数
+
+有如下结论：若 `s[i]=s[j]=x`，则 `dp[x][i][j]` 会多出`dp[xk][i+1][j-1]`个新的在开始和结尾加上 `x` 的字符串，以及 `xx` 和 `x` 这两个单独的回文字符串
+
+若 `s[i]=x, s[j]≠x`，则 `dp[x][i][j]` 等于 `dp[x][i][j-1]`
+
+若 `s[i]≠x, s[j]=x`，则 `dp[x][i][j]` 等于 `dp[x][i+1][j]`
+
+若 `s[i]≠x, s[j]≠x`，则 `dp[x][i][j]` 等于 `dp[x][i+1][j-1]`
+
+```python
+def countPalindromicSubsequences(s: str) -> int:
+	n = len(s)
+	MOD = 10 ** 9 + 7
+	dp = [[[0 for _ in range(n)] for _ in range(n)] for _ in range(4)]
+
+	for i, c in enumerate(s):
+		dp[ord(c) - ord("a")][i][i] = 1
+
+	for i in range(n-2, -1, -1):
+		for j in range(i+1, n):
+			for k, c in enumerate("abcd"):
+				if s[i] == c and s[j] == c:
+					dp[k][i][j] = 2 + sum(d[i+1][j-1] for d in dp) % MOD
+				elif s[i] == c and s[j] != c:
+					dp[k][i][j] = dp[k][i][j-1]
+				elif s[i] != c and s[j] == c:
+					dp[k][i][j] = dp[k][i+1][j]
+				else:
+					dp[k][i][j] = dp[k][i+1][j-1]
+	return sum(d[0][n-1] for d in dp) % MOD
+```
+
+
+该问题还可以通过二维数组求解，不过在求解时，需要注意减去重复的字符串。当 `s[i]=s[j]` 时，并且 `s[i:j]` 区间内也有一个区间，小区间的左右端点的值和 `s[i]` 相等，需要减去这个区间。
+
+为了快速求出这个小区间的端点，可以先预处理得到 next 和 pre 数组，`next[i][x]` 表示从 `s[i]` 开始往后下一个字符 `x` 所在的位置 `ni`，`pre[i][x]` 则表示从 `s[i]` 开始上一个位置 `pj`。
+
+如果 `ni>pj`，证明不存在这个区间，则有`dp[i][j]=2*dp[i+1][j-1]+2`：已经有`dp[i+1][j-1]` 个字符串，再在开始和结尾加上 `s[i]` 又形成了 `dp[i+1][j-1]` 个字符串，再加上 `xx` 和 `x` 这个字符串
+
+如果`ni=pj`，证明该区间只有一个元素，此时 `x` 重复了，需要减去1
+
+如果 `ni>pj`，则需要删除这个区间的回文字符串
+
+
+```python
+def countPalindromicSubsequences(s: str) -> int:
+	n = len(s)
+	MOD = 10 ** 9 + 7
+	dp = [[0 for _ in range(n)] for _ in range(n)]
+
+	pre = [[0 for _ in range(4)] for _ in range(n)]
+	next = [[0 for _ in range(4)] for _ in range(n)]
+
+	pos = [-1, -1, -1, -1]
+	for i in range(n):
+		for c in range(4):
+			pre[i][c] = pos[c]
+		pos[ord(s[i]) - ord('a')] = i
+	
+	pos = [n, n, n, n]
+	for i in range(n-1, -1, -1):
+		for c in range(4):
+			next[i][c] = pos[c]
+		pos[ord(s[i]) - ord('a')] = i
+
+	# 初始化，单个元素的不同回文子序列个数为1
+	for i in range(n):
+		dp[i][i] = 1
+	for i in range(n-2, -1, -1):
+		for j in range(i+1, n):
+			if s[i] == s[j]:
+				c = ord(s[i]) - ord('a')
+				ni = next[i][c]
+				pj = pre[j][c]
+				if ni > pj:
+					# 无需删除
+					dp[i][j] = (2 * dp[i+1][j-1] + 2) % MOD
+				elif ni == pj:
+					# 删除 x
+					dp[i][j] = (2 * dp[i+1][j-1] + 1) % MOD
+				else:
+					# 删除区间内的回文字符串
+					dp[i][j] = (2 * dp[i+1][j-1] - dp[ni+1][pj-1]) % MOD
+			else:
+				dp[i][j] = (dp[i+1][j] + dp[i][j-1] - dp[i+1][j-1]) % MOD
+
+	return dp[0][n-1]
+```
+
+
 ## 分治
 
 将长数据分成两部分进行计算
