--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -3691,9 +3691,12 @@ def longestPalindrome(s: str) -> str:
 ```
 
 
+
 ### 回文字符串的最小切割
 
 [Palindrome Partitioning - GeeksforGeeks](https://www.geeksforgeeks.org/palindrome-partitioning-dp-17/)
+
+[132. 分割回文串 II - 力扣（LeetCode）](https://leetcode.cn/problems/palindrome-partitioning-ii/)
 
 对一个字符串进行切割，使其每个子字符串都是回文的，求最小切割次数
 
@@ -3702,7 +3705,6 @@ def longestPalindrome(s: str) -> str:
 ```python
 import sys
 
-# Function to check if a substring is a palindrome
 def isPalindrome(s, i, j):
     while i < j:
         if s[i] != s[j]:
@@ -3711,14 +3713,13 @@ def isPalindrome(s, i, j):
         j -= 1
     return True
 
-# Recursive function to find the minimum number 
-# of cuts needed for palindrome partitioning
 def palPartitionRec(s, i, j):
-    if i >= j or isPalindrome(s, i, j):
+	# 如果 s[i...j] 是空字符串或者回文字符串，则不用切割
+    if i >= j or isPalindrome(s, i, j):  
         return 0
 
     res = sys.maxsize
-    
+	# 尝试每种切割方法
     for k in range(i, j):
         cuts = 1 + palPartitionRec(s, i, k) \
                  + palPartitionRec(s, k + 1, j)
@@ -3734,7 +3735,6 @@ def palPartition(s):
 加上矩阵存储状态
 
 ```python
-# Function to check if a substring is a palindrome
 def isPalindrome(s, i, j):
     while i < j:
         if s[i] != s[j]:
@@ -3743,24 +3743,17 @@ def isPalindrome(s, i, j):
         j -= 1
     return True
 
-# Recursive function to find the minimum number of
-# cuts needed for palindrome partitioning
 def palPartitionRec(s, i, j, memo):
-  
-    # Check memo for previously computed results
+
     if memo[i][j] != -1:
         return memo[i][j]
-
-    # Base case: If the substring is empty or 
-    # a palindrome, no cuts needed
+        
     if i >= j or isPalindrome(s, i, j):
         memo[i][j] = 0
         return 0
 
     res = sys.maxsize
 
-    # Iterate through all possible partitions and
-    # find the minimum cuts needed
     for k in range(i, j):
         cuts = 1 + palPartitionRec(s, i, k, memo) \
         + palPartitionRec(s, k + 1, j, memo)
@@ -3782,41 +3775,32 @@ def palPartition(s):
 int palPartition(string& s) {
     int n = s.length();
 
-    // dp[i][j] = Minimum number of cuts needed for
-    // palindrome partitioning of substring s[i..j]
+    // dp[i][j] = s[i..j] 被切分为子串均为回文字符串的最小切分次数
     int dp[n][n];
 
-    // isPalin[i][j] = true if substring s[i..j] 
-      // is palindrome,else false
     bool isPalin[n][n];
 
-    // Every substring of length 1 is a palindrome
+    // 每个长度为1的字符串都是回文字符串
     for (int i = 0; i < n; i++) {
         isPalin[i][i] = true;
         dp[i][i] = 0;
     }
 
     for (int len = 2; len <= n; len++) {
-
-        // Build solution for all substrings s[i ... j] 
-          // of length len
         for (int i = 0, j = i + len - 1; j < n ; i++, j++) {
-          
-            // If len is 2, then we just need to
-            // compare two characters. 
+            // 如果
             if (len == 2)
                 isPalin[i][j] = (s[i] == s[j]);
             else
                 isPalin[i][j] = (s[i] == s[j]) && 
                                       isPalin[i + 1][j - 1];
 
-            // IF s[i..j] is palindrome, then dp[i][j] is 0
+            // 如果 s[i..j] 是回文字符串,则 dp[i][j] 为0
             if (isPalin[i][j] == true)
                 dp[i][j] = 0;
             else {
 
-            // Make a cut at every possible location starting 
-              // from i to j, and get the minimum cost cut.
+            // 尝试 i 到 j 的各种分割方法
                 dp[i][j] = INT_MAX;
                 for (int k = i; k <= j - 1; k++)
                     dp[i][j] = min(dp[i][j], 1 + 
@@ -3824,9 +3808,6 @@ int palPartition(string& s) {
             }
         }
     }
-
-    // Return the min cut value for
-    // complete string. i.e., s[0..n-1]
     return dp[0][n - 1];
 }
 ```
@@ -3835,61 +3816,111 @@ int palPartition(string& s) {
 上面这一方法还能继续优化，先动态规划计算子字符串是否为回文字符串，然后用dp表示 0 到 i的字符串的最小切分次数，如果`0`到`i`不是回文字符串，就在 `1` 到 `i` 之间重新划分起点。
 
 ```python
-def generatePal(s, isPalin):
-    n = len(s)
-
-    # Substring s[i .. i] of len 1 
-    # is always palindromic
-    for i in range(n):
-        isPalin[i][i] = True
-
-    # Iterate over different lengths of substrings
-    for length in range(2, n + 1):
-        for i in range(n - length + 1):
-            j = i + length - 1
-
-            # Check whether s[i] == s[j] and the
-            # substring between them is a palindrome
-            if s[i] == s[j] and (length == 2 or isPalin[i + 1][j - 1]):
-              
-                # Mark the substring from i to j as a palindrome
-                isPalin[i][j] = True
-
-# Function to calculate the minimum number of cuts required
-# to make all substrings of 's' palindromic
-def palPartition(s):
-    n = len(s)
-
-    # 2D array to store whether substring s[i, j] is a palindrome or not
-    isPalin = [[False] * n for _ in range(n)]
-
-    generatePal(s, isPalin)
-
-    # dp[i] stores minimum cuts for Palindrome Partitioning of substring s[0...i] 
-    dp = [n] * n
-    
-    # There is no cut required for single character as it is always palindrome
-    dp[0] = 0
-
-    # Iterate over the given string
-    for i in range(1, n):
-
-        # Check if string 0 to i is palindrome.
-        if isPalin[0][i]:
-            # if palindrome then cuts required is 0
-            dp[i] = 0
-        else:
-            for j in range(1, i+1):
-                # if substring s[j...i] is palindromic
-                # then we can make a cut over here
-                if isPalin[j][i]:
-                    # update dp[i] with minimum cuts
-                    dp[i] = min(dp[i], 1 + dp[j - 1])
-
-    # Return the minimum cuts required 
-    # for the entire string 's'
-    return dp[n - 1]
+def minCut(s: str) -> int:
+	n = len(s)
+	dp = [n for _ in range(n)]
+	isPalin = [[True for _ in range(n)] for _ in range(n)]  # 先初始化为True
+	# 动态规划判断 s[i...j] 是否为回文字符串
+	for i in range(n-1, -1, -1):
+		for j in range(i+1, n):
+			if s[i] == s[j]:
+				isPalin[i][j] = isPalin[i+1][j-1]
+			else:
+				isPalin[i][j] = False
+	dp[0] = 0  # 单个元素分割次数为0
+	for i in range(1, n):
+		if isPalin[0][i]:
+			dp[i] = 0
+		else:
+			for j in range(1, i+1):
+				# 如果 s[j...i] 为回文字符串，只需要在s[0...j-1]的基础上加一次分割即可
+				if isPalin[j][i]:  
+					dp[i] = min(dp[i], dp[j-1]+1)
+	return dp[n-1]
 ```
+
+
+### 分割回文串Ⅲ
+
+[1278. 分割回文串 III - 力扣（LeetCode）](https://leetcode.cn/problems/palindrome-partitioning-iii/description/)
+
+允许对字符串进行修改，求出将某个字符串分割为 k 个字符串时的最小修改次数
+
+首先求出 `s[i..j]` 变成回文串时的最小修改次数 `cost[i][j]`
+
+令 `dp[i][j]` 为 `s[0:i]` 分为 `j` 个字符串时的最小修改次数，对于第 j 个字符串，可以枚举其开始可能出现的位置 `ii`，`dp[ii][j-1]` 则为`s[0..ii-1]` 分为 `j-1` 个回文字符串的最小修改次数，然后再加上 `s[ii..i-1]` 时的修改次数即可
+
+`dp[i][j] = min(dp[i][j], dp[ii][j-1]+cost[ii][i-1])`
+
+```python
+def palindromePartition(s: str, k: int) -> int:
+	n = len(s)
+	cost = [[0 for _ in range(n)] for _ in range(n)]
+	# 动态规划计算 s[i...j] 变为回文字符串时的修改次数
+	for i in range(n-1, -1, -1):
+		for j in range(i+1, n):
+			if s[i] == s[j]:
+				cost[i][j] = cost[i+1][j-1]
+			else:
+				cost[i][j] = cost[i+1][j-1] + 1
+	# dp[i,j] 为 s[0:i] 分为 j 个回文字符串所需的最小修改次数
+	dp = [[n for _ in range(k+1)] for _ in range(n+1)]
+
+	dp[0][0] = 0
+	for i in range(1, n+1):
+		for j in range(1, min(k,i)+1):
+			if j == 1:
+				dp[i][j] = cost[0][i-1]
+			else:
+				# 遍历 ii 为第 j 个字符串的起点
+				for ii in range(j-1, i):
+					# dp[ii][j-1] 为 s[0:ii]分为j-1个回文字符串时的最小修改次数
+					dp[i][j] = min(dp[i][j], dp[ii][j-1]+cost[ii][i-1])
+	return dp[n][k]
+```
+
+### 不重叠回文子字符串的最大数目
+
+[2472. 不重叠回文子字符串的最大数目 - 力扣（LeetCode）](https://leetcode.cn/problems/maximum-number-of-non-overlapping-palindrome-substrings/description/)
+
+采用记忆化搜索的方法，对于一个位置，可以选择将其作为开始，或者不选择其作为开始。如果选择作为开始，则遍历长度大于等于k的字符串末端，如果找到一个可以形成回文字符串，就停止该位置的搜索。
+
+```python
+def maxPalindromes(s: str, k: int) -> int:
+	if k == 1:
+		return len(s)
+	n = len(s)
+	isPalin = [[True for _ in range(n)] for _ in range(n)]
+
+	for i in range(n-1, -1, -1):
+		for j in range(i+1, n):
+			if s[i] == s[j]:
+				isPalin[i][j] = isPalin[i+1][j-1]
+			else:
+				isPalin[i][j] = False
+	
+	def solve(s, idx):
+		if idx == n:
+			return 0
+		if memo[idx] != -1:
+			return memo[idx]    
+		res = 0
+		# 忽略当前位置，探索下一个位置
+		res = max(res, solve(s, idx+1))
+		# 以当前节点idx作为开始，找到一个最近的可形成回文字符串的位置
+		for i in range(idx+k-1, n):
+			if isPalin[idx][i]:
+				res = max(res, 1 + solve(s, i+1))
+				break
+		
+		memo[idx] = res
+		return res
+	memo = [-1 for i in range(n)]
+	cnt = solve(s, 0)
+	return cnt
+```
+
+
 
 
 ### 获取所有的顺序子字符串
@@ -8166,30 +8197,26 @@ def InsertNode(root, data):
 删除：首先找到这个节点，将这个节点的值换成最深的节点的值，然后删除这个最深的节点，下面的代码是删除最深的节点
 
 ```python
-def delete_deepest(root, dNode):
+def delete_deepest(root, dNode):  # dNode 最深的节点，最深的节点没有子树了
     queue = [root]
     while queue:
         curr = queue.pop(0)
 
-        # If current node is the deepest node, delete it
+        # 如果当前节点就是最深的节点，直接删除
         if curr == dNode:
             curr = None
             del dNode
             return
 
-        # Check the right child first
+        # 检查左右子树
         if curr.right:
-          
-            # If right child is the deepest node, delete it
             if curr.right == dNode:
                 curr.right = None
                 del dNode
                 return
             queue.append(curr.right)
-
-        # Check the left child
+            
         if curr.left:
-            # If left child is the deepest node, delete it
             if curr.left == dNode:
                 curr.left = None
                 del dNode
@@ -8222,6 +8249,69 @@ def subtreeSum(root, res, target):
         
     return currentSum
 ```
+
+
+### 路径总和 Ⅲ
+
+[437. 路径总和 III - 力扣（LeetCode）](https://leetcode.cn/problems/path-sum-iii/description/)
+
+给定一个二叉树和目标值，求出有多少条父节点到子节点的路径（路径要求连续），该路径的节点值总和为目标值
+
+一种最简单的方法是从每个节点开始遍历，判断以该节点作为父节点时到子路径中是否存在符合条件的路径
+
+```python
+def pathSum(root: Optional[TreeNode], targetSum: int) -> int:
+	from collections import deque
+	self.ans = 0
+	def dfs(root, gt):
+		if root is None:
+			return
+		if gt == root.val:
+			self.ans += 1
+		dfs(root.left, gt - root.val)
+		dfs(root.right, gt - root.val)
+	if root is None:
+		return 0
+	
+	queue = deque()
+	queue.append(root)
+	while queue:
+		node = queue.popleft()
+		dfs(node, targetSum)
+		if node.left:
+			queue.append(node.left)
+		if node.right:
+			queue.append(node.right)
+	
+	return self.ans
+```
+
+为了避免重复计算，可以使用额外的前缀和字典来保存已经计算好的前缀和，某个节点的前缀和为从根节点到该节点路径的总和
+
+```python
+def pathSum(root: Optional[TreeNode], targetSum: int) -> int:
+	from collections import defaultdict
+	prefix = defaultdict(int)
+	prefix[0] = 1   # 如果差值为0，那么有一条路径
+	def dfs(root, curr):
+		if root is None:
+			return 0
+		
+		curr += root.val
+
+		ret = prefix[curr - targetSum]  # 如果存在差值
+
+		prefix[curr] += 1   # 保存根节点到当前节点的前缀和
+		ret += dfs(root.left, curr)
+		ret += dfs(root.right, curr)
+		prefix[curr] -= 1   # 避免重复计算
+		return ret
+	
+	ret = dfs(root, 0)
+	return ret
+```
+
+
 
 ### 验证二叉搜索树
 
