--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -826,6 +826,18 @@ def solve(arr):
     return maxArea
 ```
 
+这里在找到前一个较小值时，可以同时找到后一个较小值
+
+```python
+st = []
+for i in range(n):
+	while st and arr[i] < arr[st[-1]]:
+		next[st.pop()] = i
+	if st:
+		prev[i] = st[-1]
+	st.append(i)
+```
+
 
 ### 数组的下一个排列
 
@@ -1717,6 +1729,31 @@ def search(self, arr: List[int], target: int) -> int:
 ```
 
 
+在旋转后的数组中找到最小值
+
+[153. 寻找旋转排序数组中的最小值 - 力扣（LeetCode）](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/)
+
+如果 `arr[mid]>arr[r]` 证明右半部分出现了乱序，那么最小值在右半部分，设置 `l=mid+1`，反之左半部分，为了避免mid指向的就是最小值所以设置 `h = mid`
+
+```python
+def findMin(nums: List[int]) -> int:
+	n = len(nums)
+	l, r = 0, n - 1
+	while l <= r:
+		if l == r:
+			return nums[l]
+		if r == l + 1:
+			return min(nums[l], nums[r])
+		
+		mid = l + (r - l) // 2
+
+		if nums[mid] > nums[r]:
+			l = mid + 1
+		else:
+			r = mid
+```
+
+
 ### 在三个排好序的数组中找到最相近的数
 
 有三个已经排好序的数组，现在要找到三个数组中最相近的三个数
@@ -1803,6 +1840,50 @@ def getMedian(a, b):
             low = mid1 + 1
     
     return 0
+```
+
+
+如果两个数组大小不相同，也可以按照这种方法
+
+```python
+def findMedianSortedArrays(self, nums1, nums2) -> float:
+	m = len(nums1)
+	n = len(nums2)
+
+	if n > m:
+		return self.findMedianSortedArrays(nums2, nums1)
+
+	half = (m + n) // 2  # 一半数据
+
+	low, high = 0, m
+	while low <= high:
+		mid = low + (high - low) // 2
+
+		ml = float("-inf") if mid <= 0 else nums1[mid-1]
+		mr = float("inf") if mid >= m else nums1[mid]
+
+		nmid = half - mid  # 另一个数组的分界点
+		# 处理一边过多数据时的情况
+		if nmid > n:
+			low = mid + 1
+			continue
+		if nmid < 0:
+			high = mid - 1
+			continue
+
+		nl = float("-inf") if nmid <= 0 else nums2[nmid-1]
+		nr = float("inf") if nmid >= n else nums2[nmid]
+
+		if mr < nl:
+			low = mid + 1
+		elif nr < ml:
+			high = mid - 1
+		else: # 存在交点（相等也是交点）
+			# 奇偶分类
+			if (m + n) & 1 == 1:
+				return min(mr, nr)
+			else:
+				return (max(nl, ml) + min(mr, nr)) / 2
 ```
 
 
@@ -2138,6 +2219,7 @@ def segregateevenandodd(arr):
             r -= 1
     m = e + 1 if (arr[e] & 1) == 0 else e  # m 位置为偶数
 ```
+
 
 ### 将数组排序为波形
 
@@ -2676,7 +2758,7 @@ def printUnsorted(arr, n):
 
 https://www.geeksforgeeks.org/nearly-sorted-algorithm
 
-对于一个几乎排好序的序列，即每个元素位于和其应处位置的距离小于等于k的位置
+对于一个几乎排好序的序列，即每个元素位于和其应处位置的距离小于等于 k 的位置
 
 可以使用堆排序，维持一个大小为k的堆，将前k个元素放进堆里，如果第k+1个元素小于堆顶元素，那么将其放到第一个位置，否则将堆顶元素弹出，并放入第一个位置，再将第k+1个元素塞进去
 
@@ -2689,14 +2771,16 @@ def nearlySorted(self, arr, k):
 	min_heap = []
 	if k == 0:
 		return
-	
+	# 将前 k 个元素塞入堆中
 	for i in range(k):
 		heapq.heappush(min_heap, arr[i])
 	
 	for i in range(k, n):
+		# 如果该元素小于堆顶元素，则将其放在前面
 		if arr[i] < min_heap[0]:
 			arr[i - k] = arr[i]
 		else:
+		# 弹出最小元素，将较大的元素塞入堆中
 			item = heapq.heappop(min_heap)
 			arr[i - k] = item
 			heapq.heappush(min_heap, arr[i])
@@ -2704,6 +2788,36 @@ def nearlySorted(self, arr, k):
 	for i in range(n-k, n):
 		item = heapq.heappop(min_heap)
 		arr[i] = item
+```
+
+
+### 数组中的第 K 个最大元素
+
+[215. 数组中的第K个最大元素 - 力扣（LeetCode）](https://leetcode.cn/problems/kth-largest-element-in-an-array/description/)
+
+
+给定整数数组和整数 k，返回数组中第 k 个最大的元素
+
+如果需要设计一个时间复杂度为 `O(n)` 的算法，可以使用桶排序，由于本问题针对整数数组，因此桶的大小取1即可。
+
+```python
+def findKthLargest(nums: List[int], k: int) -> int:
+	# -10000 <= nums[i] <= 10000
+	buckets = [0] * 20001
+	n = len(nums)
+	for i in range(n):
+		buckets[nums[i]+10000] += 1
+	
+	for i in range(10000, -10001, -1):
+		k -= buckets[i+10000]
+		if k <= 0:
+			return i
+```
+
+如果不是整数或者值的范围很大，可以使用快速排序
+
+```python
+
 ```
 
 
@@ -2773,7 +2887,6 @@ def mergeArrays(a, b):
 
 ### 将所有小于k的数排在一起的最小交换数
 
-
 [Minimum swaps required to bring all elements less than or equal to k together - GeeksforGeeks](https://www.geeksforgeeks.org/minimum-swaps-required-bring-elements-less-equal-k-together/)
 
 首先统计所有小于k的数的个数 s，然后创建一个滑动窗口，大小为 s，统计这个窗口内大于等于k的元素的个数，最小交换数取这些窗口内大于等于k的元素个数的最小值即可。
@@ -2787,10 +2900,8 @@ def minSwap (arr, k) :
 	for i in range(n):
 		if arr[i] <= k:
 			ws += 1
-	
 	if ws == 0:
 		return 0
-		
 	bad = 0
 	
 	# 计算初始窗口中大于k的数量
@@ -2799,14 +2910,14 @@ def minSwap (arr, k) :
 			bad += 1
 	
 	res = bad
-	
+	# 遍历后面的窗口
 	for i in range(ws, n):
 		if arr[i - ws] > k:
 			bad -= 1
 		
 		if arr[i] > k:
 			bad += 1
-		
+		# 更新结果
 		res = min(res, bad)
 	return res
 ```
@@ -3920,7 +4031,17 @@ def maxPalindromes(s: str, k: int) -> int:
 	return cnt
 ```
 
+换成动态规划则是
 
+```python
+dp = [0] * (n+1)
+for i in range(1, n+1):
+	dp[i] = dp[i-1]
+	for j in range(1, i+1): 
+	# 如果有长度至少为 k 的回文子字符串，加1
+		if (i - j + 1 >= k and isPalin[j-1][i-1]):
+			dp[i] = max(dp[i], dp[j-1]+1)
+```
 
 
 ### 获取所有的顺序子字符串
