--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -468,6 +468,8 @@ def topKFrequent(arr, k):
 
 [Find Median from Running Data Stream - GeeksforGeeks](https://www.geeksforgeeks.org/median-of-stream-of-integers-running-integers/)
 
+[295. 数据流的中位数 - 力扣（LeetCode）](https://leetcode.cn/problems/find-median-from-data-stream/description/)
+
 给定一个数据流，如何找到中位数，假设有偶数个数，那么需要对中间两个进行平均。
 
 使用堆实现，主要思路是维持两个堆，一个堆存储较小值，另一个堆存储较大值
@@ -902,6 +904,77 @@ return len(nums) + 1
 ```
 
 
+### 寻找重复数
+
+[287. 寻找重复数 - 力扣（LeetCode）](https://leetcode.cn/problems/find-the-duplicate-number/)
+
+一个长度为 n+1 的数组中，数字分布在 `[0,n]` 中，要求在常数空间、`O(n)` 时间内找到数组中的重复元素，该元素保证只有一个，出现两次或多次
+
+如果不要求常数空间，可以通过哈希记录每个元素的位置，如果出现重复元素就返回。
+
+如果将时间放宽一些，可以通过二分查找来实现，如果出现了一个变量是重复的，那么统计小于等于该变量的元素的个数，会发现个数大于等于这个变量。定义一个变量 `cnt` 统计小于等于 `mid` 的元素的数量，如果 `cnt > i`，证明该元素处于右半部分，否则处于左半部分
+
+```python
+def findDuplicate(nums: List[int]) -> int:
+	n = len(nums)
+	low, high = 1, n-1
+	res = -1
+	while low <= high:
+		mid = low + (high - low) // 2
+		cnt = 0
+		for i in range(n):
+			cnt += nums[i] <= mid
+		if cnt <= mid:  # 计数小于mid，证明重复数在右半部分
+			low = mid + 1
+		else:
+			high = mid - 1
+			ans = mid
+    return ans
+```
+
+
+基于二进制判断，将`[1, n]` 内的所有数字按照二进制展开，统计每一位 1 的数量，再将数组中每个数字都展开为二进制，统计每一位1的数量，如果两者数量不等，证明存在重复数，并且可以根据哪些位不等判断重复数的具体值
+
+```python
+def findDuplicate( nums: List[int]) -> int:
+	n = len(nums)
+	bit_max = 31
+	while ((n - 1) >> bit_max) == 0: 
+		bit_max -= 1
+	ans = 0
+	for bit in range(0, bit_max+1):
+		x, y = 0, 0
+		for i in range(n):
+			if nums[i] & (1 << bit): # 统计数组中的每个值
+				x += 1
+			if i >= 1 and (i & (1 << bit)): # 统计[1, n]
+				y += 1
+		if x > y:
+			ans |= 1 << bit
+	return ans
+```
+
+
+快慢指针判环，对于数组每个位置连一条 `i->nums[i]` 的边，如果存在重复数字，那么重复数字一定有两条边，因此存在环。如 1 4 5 5 2 3 这个例子
+
+`0->nums[0]=1`, `1->nums[1]=4`, `4->nums[4]=2`, `2->nums[2]=5`, `5->nums[5]=3`, `3->nums[3]=5`，出现环，并且环的起点为重复数字（注意似乎只能从0出发才能实现，并且并不是因为有重复数字才会出现环）
+
+```python
+def findDuplicate(nums: List[int]) -> int:
+	slow = 0
+	fast = 0  # 注意这里不能让fast先走一步，否则会出错
+	while True:
+		slow = nums[slow]
+		fast = nums[nums[fast]]
+		if fast == slow:
+			break
+	
+	fast = 0
+	while fast != slow:
+		slow = nums[slow]
+		fast = nums[fast]
+	return fast
+```
 
 ## 哈希问题
 
@@ -2221,6 +2294,32 @@ def segregateevenandodd(arr):
 ```
 
 
+### 三种类型数据排序
+
+[75. 颜色分类 - 力扣（LeetCode）](https://leetcode.cn/problems/sort-colors/description/)
+
+将三种颜色进行排序，红色代表0，白色代表1，蓝色代表2
+
+使用两个指针 `p0` 和 `p1` 分别指向 0 和 1 应处于的位置，然后遍历数组 `i`，如果一个值为1，那么将`i` 和指针 `p1` 交换，然后 `p1+1`；如果一个值为 0，那么将 `i` 和指针 `p0` 交换，此处需要注意一点，这里的交换可能会把 1 交换出去，如果 `p0<p1`，那么之前一定有连续的1，此时会把1交换出去，所以需要将 `p1` 需要和第 `i` 个值交换，重新换回来，两个指针均向后移动。
+
+```python
+def sortColors(nums: List[int]) -> None:
+	p0 = 0
+	p1 = 0
+
+	n = len(nums)
+	for i in range(n):
+		if nums[i] == 1:
+			nums[i], nums[p1] = nums[p1], nums[i]
+			p1 += 1
+		elif nums[i] == 0:
+			nums[i], nums[p0] = nums[p0], nums[i]
+			if p0 < p1:
+				nums[i], nums[p1] = nums[p1], nums[i]
+			p0 += 1
+			p1 += 1
+```
+
 ### 将数组排序为波形
 
 给定一个未排序的数组，将其排序为 `arr[0] >= arr[1] <= arr[2] >= arr[3] <= arr[4]` 这种情况
@@ -2795,7 +2894,6 @@ def nearlySorted(self, arr, k):
 
 [215. 数组中的第K个最大元素 - 力扣（LeetCode）](https://leetcode.cn/problems/kth-largest-element-in-an-array/description/)
 
-
 给定整数数组和整数 k，返回数组中第 k 个最大的元素
 
 如果需要设计一个时间复杂度为 `O(n)` 的算法，可以使用桶排序，由于本问题针对整数数组，因此桶的大小取1即可。
@@ -2817,7 +2915,50 @@ def findKthLargest(nums: List[int], k: int) -> int:
 如果不是整数或者值的范围很大，可以使用快速排序
 
 ```python
+def findKthLargest(nums: List[int], k: int) -> int:
+	def quickSelect(l, r, k):
+		if l == r: return nums[k]
+		pivot, i, j = nums[l], l-1, r+1
+		while i < j:
+			i += 1
+			while nums[i] < pivot: # 在左侧找到大于pivot的数
+				i += 1
+			j -= 1
+			while nums[j] > pivot: # 在右侧找到小于pivot的数
+				j -= 1
+			if i < j:        # 如果可以交换，就交换
+				nums[i], nums[j] = nums[j], nums[i]
+		# j 为右侧大于pivot的数的数量，如果 n-k 小于j，证明在左侧寻找
+		if k <= j: return quickSelect(l, j, k)
+		else: return quickSelect(j+1, r, k)
+	
+	n = len(nums)
+	return quickSelect(0, n-1, n-k)
+```
 
+快速排序的另一种方法，首先在数组中随机选择一个pivot，然后设置三个数组，分别储存大于pivot，等于pivot和小于pivot的值，然后根据三个数组的大小和要选择的第k个值决定在哪个数组中，对该数组进行同样的操作
+
+```python
+def findKthLargest(nums: List[int], k: int) -> int:
+	def quickSelect(nums,k):
+		pivot = random.choice(nums)
+		bigger, equal, smaller = [], [], []
+		for i in range(len(nums)):
+			if nums[i] > pivot:
+				bigger.append(nums[i])
+			elif nums[i] < pivot:
+				smaller.append(nums[i])
+			else:
+				equal.append(nums[i])
+		# 如果 k 小于bigger的长度则在bigger中寻找
+		if k <= len(bigger): 
+			return quickSelect(bigger, k)
+		# 如果 k 大于bigger和equal的长度，那么在smaller中寻找
+		elif k > len(bigger) + len(equal): 
+			return quickSelect(smaller, k - len(bigger) - len(equal))
+		else: 
+			return pivot
+	return quickSelect(nums, k)
 ```
 
 
@@ -2828,13 +2969,9 @@ def findKthLargest(nums: List[int], k: int) -> int:
 ```python
 def sort(arr, n) :
     
-    # Do counting sort for first digit in base n. 
-    # Note that instead of passing digit number,
-    # exp (n^0 = 1) is passed. 
+    # 在基数 n 对第一位元素进行计数排序 exp (n^0 = 1)
     countSort(arr, n, 1) 
-    # Do counting sort for second digit in base n. 
-    # Note that instead of passing digit number, 
-    # exp (n^1 = n) is passed. 
+    # 在基数n，对第二位元素进行计数排序 exp (n^1 = n)
     countSort(arr, n, n)
 ```
 
@@ -10114,6 +10251,80 @@ def greedy_solve(adj, V):
 ```
 
 
+### 找到最终的安全状态
+
+[802. 找到最终的安全状态 - 力扣（LeetCode）](https://leetcode.cn/problems/find-eventual-safe-states/description/)
+
+在一个有 `n` 个节点的有向图，节点按 `0` 到 `n-1` 编号，如果一个节点没有连出的有向边，则该节点是终端节点。如果从该节点开始的所有可能路径都通向终端节点，则该节点为安全节点，找到所有的安全节点（包括终端节点）。
+
+解决该问题，需要用三种颜色标记节点，分别为 0（白色）：尚未被访问，1（灰色）：位于递归栈中，或者在某个换上，2（黑色）：搜索完毕是安全节点
+
+首次访问一个节点时，将其标记为灰色，并继续搜索与其相邻的节点；如果遇到了一个灰色节点，证明找到一个环，此时退出搜索，栈中的节点仍然是灰色。如果搜索过程中没有遇到灰色节点，说明没有遇到环，递归返回前，将其标记从灰色改为黑色
+
+```python
+def eventualSafeNodes(graph: List[List[int]]) -> List[int]:
+	n = len(graph)
+	# 标记节点的状态, 0 表示未访问, 1表示在一个环中，2表示安全节点
+	node_attributes = [0] * n  
+		
+	def dfs(i):
+		if node_attributes[i] > 0:
+			return node_attributes[i] == 2
+		node_attributes[i] = 1  # 首次遇到标记为1
+		for j in graph[i]:
+			if not dfs(j):
+				return False
+		# 没有遇到环
+		node_attributes[i] = 2  # 所有可能路径都通向终端节点，标记为安全节点
+		return True
+	
+	for i in range(n):
+		if node_attributes[i] == 0:
+			dfs(i)
+	return [i for i in range(n) if node_attributes[i]==2]
+```
+
+
+### 颜色交替的最短路径
+
+[1129. 颜色交替的最短路径 - 力扣（LeetCode）](https://leetcode.cn/problems/shortest-path-with-alternating-colors/description/)
+
+给定一个图，图中包含两种颜色的边，求从节点0到其它节点的颜色交替出现的最小路径是多大
+
+可以使用层序遍历，注意在生成邻接矩阵时需要将边的颜色也加入
+
+```python
+def shortestAlternatingPaths(n: int, redEdges, blueEdges):
+	from collections import deque
+
+	adj = [[] for _ in range(n)]
+	for edge in redEdges:
+		adj[edge[0]].append((edge[1], 0))  # 0 表示红色
+	for edge in blueEdges:
+		adj[edge[0]].append((edge[1], 1))  # 1 表示蓝色
+	queue = deque()
+	level = 0
+	queue.append((0, 0))
+	queue.append((0, 1))
+	res = [-1] * n
+	visited = {(0, 0), (0, 1)}
+	while queue:
+		size = len(queue)
+		for _ in range(size):
+			node = queue.popleft()
+			if res[node[0]] == -1:
+				res[node[0]] = level
+			for n in adj[node[0]]:
+				# 如果边的颜色不一致，且该节点没有被访问过
+				if n[1] != node[1] and n not in visited: 
+					visited.add(n)
+					queue.append(n)
+		level += 1
+	return res
+```
+
+
+
 ### TSP问题
 
 [Travelling Salesman Problem using Dynamic Programming - GeeksforGeeks](https://www.geeksforgeeks.org/travelling-salesman-problem-using-dynamic-programming/#using-recursion-on-time-and-on-space)
@@ -10307,7 +10518,7 @@ def fractionalKnapsack(W, prices, weights):
 ```
 
 对于0-1背包问题，则需要采用动态规划的问题，对于第 i 个物品，背包重量为 j 时
-如果背包能够装下：
+如果背包能够装下，分成装该物品或者不装该物品：
 `dp[i][j] = max(dp[i-1][j], profit[i] + dp[i-1][j-weights[i]])`
 
 如果装不下：
@@ -10337,14 +10548,14 @@ def solve_dp(profit, weight, N, W):
 for i in range(n, 0, -1):
 	if res <= 0:
 		break
+	# 该物品没有被选择
 	if res == K[i - 1][w]:
 		continue
 	else:
-		# This item is included.
+		# 第i个物品被选择
 		print(wt[i - 1])
 		 
-		# Since this weight is included
-		# its value is deducted
+		# 减去该物品的价值和重量，寻找下一个物品
 		res = res - val[i - 1]
 		w = w - wt[i - 1]
 ```
