--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -124,6 +124,7 @@ def primePalindrome(n: int) -> int:
 				return x
 ```
 
+
 ### 用Rand7() 实现 Rand10()
 
 [470. 用 Rand7() 实现 Rand10() - 力扣（LeetCode）](https://leetcode.cn/problems/implement-rand10-using-rand7/)
@@ -10048,40 +10049,45 @@ def solve(adj, V):
 ```
 
 
-使用 Tarjan 算法求解关节点的数量
+使用 Tarjan 算法求解关节点的数量，在 DFS 树中，如果一个顶点 u 为关键点，则有下面两个条件
+
++ u 是 DFS 树的根，并且至少有两个子节点
++ u 不是DFS树的根，有一个子节点 v，使得以 v 为根的子树中没有一个节点存在与 u 的祖先节点相连的边。
+
+![](https://media.geeksforgeeks.org/wp-content/uploads/20230801170641/example-1drawio.png)
+借助上面的条件，
+
++ 在DFS 遍历时，维持一个parent数组，`parent[u]` 保存 `u` 节点的父节点
++ 如果当前访问到的节点 u 的`parent[u]` 为NULL，并且有两个以上的子节点，则该节点为关键点
++ 为了处理第二个条件，维持一个数组 `disc` 保存节点的发现时间
++ 对于每个节点 `u`，找到以 `u` 为根节点的子树中最近访问的节点（最小发现时间的节点），所以需要维持一个额外的数组 `low`，`low[u]=min(disc[u],disc[w]))`，这里的 `w` 时 u 的一个祖先，
 
 ```python
 def findPoints(adj, u, visited, disc, low, time, parent, isAP):
-    
-    # Count of children in DFS Tree
+    # 计算DFS 树的子节点
     children = 0
-    
     visited[u] = 1
     
-    # Initialize discovery time and low value
+    # 初始化发现时间和最小发现时间
     time[0] += 1
     disc[u] = time[0]
     low[u] = time[0]
     
-    # Go through all vertices adjacent to this
+    # 遍历所有邻接节点
     for v in adj[u]:
-        
-        # If v is not visited yet, then make it a child of u
-        # in DFS tree and recur for it
+        # 如果 v 还未被访问，标记其为 u 的子节点
         if visited[v] == 0:
             children += 1
             findPoints(adj, v, visited, disc, low, time, u, isAP)
             
-            # Check if the subtree rooted with v has
-            # a connection to one of the ancestors of u
+            # 如果子节点能够被更小发现时间的节点
             low[u] = min(low[u], low[v])
             
-            # If u is not root and low value of one of
-            # its child is more than discovery value of u.
+            # 如果 u 不是根节点，并且存在子节点的low值大于 u 的发现时间
             if parent != -1 and low[v] >= disc[u]:
                 isAP[u] = 1
-        
-        # Update low value of u for parent function calls.
+                
+        # 更新 u 的low值
         elif v != parent:
             low[u] = min(low[u], disc[v])
     
@@ -10090,46 +10096,96 @@ def findPoints(adj, u, visited, disc, low, time, parent, isAP):
         isAP[u] = 1
 
 def articulationPoints(adj):
-    
     V = len(adj)
-    
-    res = []
-    
-    # 记录顶点的发现时间
-    disc = [0] * V
-    
-    # to store earliest visited vertex (the vertex with minimum
-    # discovery time) that can be reached from subtree
-    low = [0] * V
-    
-    # to keep track of visited vertices
+    disc = [0] * V   # 记录顶点的发现时间
+    low = [0] * V   # 保存子树中最早访问到的节点
     visited = [0] * V
-    
-    # to mark the articulation points
-    isAP = [0] * V
-    
-    # to store time and parent node
-    time = [0]
+    isAP = [0] * V  # 标记关键点，1 表示为关键点
+    time = [0]  # 存储时间和父节点
     par = -1
     
-    # Adding this loop so that the code works
-    # even if we are given disconnected graph
+    # 遍历所有节点，防止出现非联通图
     for u in range(V):
         if visited[u] == 0:
             findPoints(adj, u, visited, disc, low, time, par, isAP)
-    
-    # storing the articulation points
-    for u in range(V):
-        if isAP[u] == 1:
-            res.append(u)
-    
-    # if no points are found, return -1
-    if not res:
-        return [-1]
-    
-    return res
+
+    return isAP
 ```
 
+
+### 查找集群中的关键连接
+
+该问题相当于求割边。只有环路中的边删除才能保持连接，非环路的边为割边。为了求出非环路的边，给所有的节点赋一个初始ID，一个回路的所有节点共享一个ID，并取最小值，因此环路中的所有节点和入环的节点的ID相同，如果父节点 `p` 到入环节点 `i` 的路径不构成一条边，那么入环节点ID和其初始ID是相同的，所以 `(p,i)` 是一条割边
+
+```python
+def criticalConnections(n: int, connections):
+	adj = [[] for _ in range(n)]
+	# 构建无向图
+	for conn in connections:
+		adj[conn[0]].append(conn[1])
+		adj[conn[1]].append(conn[0])
+	ids = [-1] * n
+	res = []
+
+	def findPoints(i, id, parent):
+		ids[i] = id   # 先假定节点的 id
+		for j in adj[i]:
+			if j == parent:
+				continue
+			elif ids[j] == -1:  # 如果邻接节点的id未求解
+				ids[i] = min(ids[i], findPoints(j, id+1, i))
+			else:  # 已经求解
+				ids[i] = min(ids[i], ids[j])
+		# 如果 ids[i] == id 证明这段路径不构成一个环路
+		if ids[i] == id and parent != -1:
+			res.append([parent, i])
+		return ids[i]
+	findPoints(0, 0, -1)
+	return res
+```
+
+
+### 最短的桥
+
+[934. 最短的桥 - 力扣（LeetCode）](https://leetcode.cn/problems/shortest-bridge/description/)
+
+已知在一张图中包含两个岛，每个岛由相连（上下左右）的 1 组成，可以转变一些0为1，求出使这两座岛相邻的最小转变次数
+
+先记录下一座岛屿的全部点，然后逐层向外扩张，直至四周出现另一座岛，为了避免重复访问，将先记录的岛全部变为2，
+
+```python
+def shortestBridge(self, grid: List[List[int]]) -> int:
+	from collections import deque
+	m = len(grid)
+	n = len(grid[0])
+	dirs = [[0, 1], [0,-1], [1, 0], [-1, 0]]
+	queue = deque()   # 记录第一个岛屿的组成点的位置
+
+	def dfs(x, y):
+		queue.append((x, y))
+		grid[x][y] = 2
+		for d0, d1 in dirs:
+			nx, ny = x + d0, y + d1
+			if 0 <= nx < m and 0 <= ny < n and grid[nx][ny] == 1:
+				dfs(nx, ny)
+	# 找到第一个 1 对应的 i 和 j
+	i, j = next((i, j) for i in range(n) for j in range(n) if grid[i][j])
+	dfs(i, j)
+	steps = 0
+	while True:
+		size = len(queue)
+		for i in range(size):
+			i, j = queue.popleft()
+			for d0, d1 in dirs:
+				ni, nj = i + d0, j + d1
+				if 0 <= ni < m and 0 <= nj < n:
+					if grid[ni][nj] == 1:
+						return steps
+					if grid[ni][nj] == 0:  # 周围是0，扩张
+						grid[ni][nj] = 2
+						queue.append((ni, nj))
+		steps += 1
+```
 
 ### 计算图中树的数量
 
@@ -10485,6 +10541,52 @@ def solve(V, adj):
 [Number of sink nodes in a graph - GeeksforGeeks](https://www.geeksforgeeks.org/number-sink-nodes-graph/)
 
 初始化一个数组 A，遍历所有的边，对于 `v->u`，则设置 `A[v]=1`，当遍历完之后，统计 A 中 0 的个数。
+
+
+### 通知所有员工需要的时间
+
+[1376. 通知所有员工所需的时间 - 力扣（LeetCode）](https://leetcode.cn/problems/time-needed-to-inform-all-employees/description/)
+
+公司里有 `n` 名员工，每个员工的 ID 都是独一无二的，编号从 `0` 到 `n - 1`。公司的总负责人通过 `headID` 进行标识。在 `manager` 数组中，每个员工都有一个直属负责人，其中 `manager[i]` 是第 `i` 名员工的直属负责人。对于总负责人，`manager[headID] = -1`。题目保证从属关系可以用树结构显示。
+
+公司总负责人想要向公司所有员工通告一条紧急消息。他将会首先通知他的直属下属们，然后由这些下属通知他们的下属，直到所有的员工都得知这条紧急消息。第 `i` 名员工需要 `informTime[i]` 分钟来通知它的所有直属下属（也就是说在 `informTime[i]` 分钟后，他的所有直属下属都可以开始传播这一消息）。求通知所有员工这一紧急消息所需要的**分钟数** 。
+
+
+这个问题可以采用DFS的方法解决，一个重点在如何建树
+
+```python
+def numOfMinutes(n: int, headID: int, manager, informTime):
+	max_time = 0
+	queue = [headID]
+	# 建树
+	adj = [[] for _ in range(n)]
+	for i in range(n):
+		adj[manager[i]].append(i)
+
+	visited = [False] * n
+	def dfs(i):
+		visited[i] = True
+		res = 0
+		for j in adj[i]:
+			# 每个节点向下传
+			if not visited[j]:
+				res = max(res, informTime[i]+dfs(j))
+		return res
+	res = dfs(headID)
+	return res
+```
+
+此外还可以考虑自底向上，用记忆化搜索的方法，尝试每一个节点
+
+```python
+def numOfMinutes(self, n: int, headID: int, manager, informTime):
+	@cache   # 缓存装饰器，避免重复计算 dfs 的结果
+	def dfs(i):
+		if i == headID:
+			return informTime[i]
+		return dfs(manager[i]) + informTime[i]
+	return max([dfs(i) for i in range(n)])
+```
 
 
 
