--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -10313,7 +10313,7 @@ def greedy_solve(adj, V):
 
 在一个有 `n` 个节点的有向图，节点按 `0` 到 `n-1` 编号，如果一个节点没有连出的有向边，则该节点是终端节点。如果从该节点开始的所有可能路径都通向终端节点，则该节点为安全节点，找到所有的安全节点（包括终端节点）。
 
-解决该问题，需要用三种颜色标记节点，分别为 0（白色）：尚未被访问，1（灰色）：位于递归栈中，或者在某个换上，2（黑色）：搜索完毕是安全节点
+解决该问题，需要用三种颜色标记节点，分别为 0（白色）：尚未被访问，1（灰色）：位于递归栈中，或者在某个环上，2（黑色）：搜索完毕是安全节点
 
 首次访问一个节点时，将其标记为灰色，并继续搜索与其相邻的节点；如果遇到了一个灰色节点，证明找到一个环，此时退出搜索，栈中的节点仍然是灰色。如果搜索过程中没有遇到灰色节点，说明没有遇到环，递归返回前，将其标记从灰色改为黑色
 
@@ -10588,6 +10588,197 @@ def numOfMinutes(self, n: int, headID: int, manager, informTime):
 	return max([dfs(i) for i in range(n)])
 ```
 
+
+
+### 最小基因变化
+
+[433. 最小基因变化 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-genetic-mutation/description/)
+
+使用BFS搜索
+
+```python
+def minMutation(startGene: str, endGene: str, bank: List[str]) -> int:
+	from collections import deque
+	n = len(startGene)
+	bank_set = set(bank)
+	if endGene not in bank_set:
+		return -1
+	
+	q = deque()
+	q.append((startGene, 0))  # 塞入目前的基因序列和变化次数
+	while q:
+		cur, step = q.popleft()
+		for i, x in enumerate(cur):
+			for y in "ACGT":   # 尝试每种基因
+				if y != x:
+					nxt = cur[:i] + y + cur[i+1:]
+					if nxt in bank_set:
+						if nxt == endGene:
+							return step + 1
+						bank_set.remove(nxt)
+						q.append((nxt, step + 1))  # 添加新的基因
+	return -1
+```
+
+
+### 01矩阵
+
+[542. 01 矩阵 - 力扣（LeetCode）](https://leetcode.cn/problems/01-matrix/description/)
+
+一个矩阵中只有0和1，求所有元素到1的距离。
+
+该问题为多源BFS，定义一个dist矩阵，遍历原矩阵将所有的0塞入队列中，并设置`dist[i][j]` 为0，然后进行多源的BFS，对于所有的 0 遍历上下左右四个方向，更新 1 的值
+
+```python
+def updateMatrix(mat: List[List[int]]) -> List[List[int]]:
+	from collections import deque
+	m = len(mat)
+	n = len(mat[0])
+	dist = [[-1 for _ in range(n)] for _ in range(m)]
+	dirs = [[0, 1], [0, -1], [1, 0], [-1, 0]]
+	queue = deque()
+	# 获取所有的 0 元素
+	for i in range(m):
+		for j in range(n):
+			if mat[i][j] == 0:
+				dist[i][j] = 0
+				queue.append((i, j, 0))
+	while queue:
+		x, y, d = queue.popleft()
+		for dx, dy in dirs:
+			nx, ny = x + dx, y + dy
+			if 0 <= nx < m and 0 <= ny < n:
+				if dist[nx][ny] == -1:  # 如果未设置距离
+					if mat[nx][ny] == 1:  
+						dist[nx][ny] = d + 1
+						queue.append((nx, ny, d+1))
+	return dist
+```
+
+该问题也能通过动态规划求解，不过需要需要规划两次，分别为水平向左和向上运动，向右和向下运动
+
+```python
+def updateMatrix(mat: List[List[int]]) -> List[List[int]]:
+	from collections import deque
+	m = len(mat)
+	n = len(mat[0])
+	dist = [[m + n for _ in range(n)] for _ in range(m)]
+	for i in range(m):
+		for j in range(n):
+			if mat[i][j] == 0:
+				dist[i][j] = 0
+	
+	# 水平向左和竖直向上移动
+	for i in range(m):
+		for j in range(n):
+			if i - 1 >= 0:
+				dist[i][j] = min(dist[i][j], dist[i-1][j]+1)
+			if j - 1 >= 0:
+				dist[i][j] = min(dist[i][j], dist[i][j-1]+1)
+	# 水平向右和竖直向下移动
+	for i in range(m-1, -1, -1):
+		for j in range(n-1, -1, -1):
+			if i + 1 < m:
+				dist[i][j] = min(dist[i][j], dist[i+1][j]+1)
+			if j + 1 < n:
+				dist[i][j] = min(dist[i][j], dist[i][j+1]+1)
+	
+	return dist
+```
+
+
+### 二叉树中所有距离为 K 的结点
+
+[863. 二叉树中所有距离为 K 的结点 - 力扣（LeetCode）](https://leetcode.cn/problems/all-nodes-distance-k-in-binary-tree/description/)
+
+先用DFS找到所有节点的父节点，再以目标节点作为根节点，搜索左右子树和父节点的距离为 k 的节点，由于树的根节点发生变化，因此搜索时需要避免搜索到父节点。
+
+```python
+def distanceK(root: TreeNode, target: TreeNode, k: int) -> List[int]:
+	parent = {}
+	ans = []
+	# 设置父节点
+	def findParents(node):
+		if node.left is not None:
+			parent[node.left.val] = node
+			findParents(node.left)
+		if node.right is not None:
+			parent[node.right.val] = node
+			findParents(node.right)
+	
+	def findk(node, par, depth):
+		if node is None:
+			return
+
+		if depth == k:
+			ans.append(node.val)
+			return
+		if node.left != par:
+			findk(node.left, node, depth+1)
+		if node.right != par:
+			findk(node.right, node, depth+1)
+		# 如果原树中的父节点存在，且不等于目前的树中的父节点
+		if node.val in parent and parent[node.val] != par:
+			findk(parent[node.val], node, depth+1)
+	
+	findParents(root)
+
+	findk(target, None, 0)
+	return ans
+```
+
+
+
+### 获取所有钥匙的最短路径
+
+[864. 获取所有钥匙的最短路径 - 力扣（LeetCode）](https://leetcode.cn/problems/shortest-path-to-get-all-keys/description/)
+
+这个题目和常规的BFS有一些差别，由于引入了 keys 这个变量，因此需要将keys也加入到 visited 矩阵中，为了方便表示，将keys用二进制表示，在选择下一个位置时，如果遇到钥匙，需要额外初始化一个变量来保存keys，防止四个方向出现多个key
+
+```python
+def shortestPathAllKeys(grid: List[str]) -> int:
+	from collections import deque, defaultdict
+	m = len(grid)
+	n = len(grid[0])
+	dirs = [[1, 0], [-1, 0], [0, 1], [0, -1]]
+	queue = deque()
+	k = 0   # k 为全部的key都获取时的状态
+	for i in range(m):
+		for j in range(n):
+			if grid[i][j] == "@":
+				queue.append((i, j, 0, 0))
+			if "a" <= grid[i][j] <= 'f':
+				k |= 1 << (ord(grid[i][j]) - ord("a"))
+	
+	visited = [[defaultdict(bool) for _ in range(n)] for _ in range(m)]
+
+	def isSafe(x, y, keys):
+		if 0 <= x < m and 0 <= y < n and grid[x][y] != "#":
+			if "A" <= grid[x][y] <= "F":
+				key_idx = ord(grid[x][y].lower()) - ord("a")
+				if keys & (1 << key_idx) != 0:  # 判断是否有对应的钥匙
+					return True
+			else:
+				return True
+		return False
+
+	while queue:
+		x, y, keys, steps = queue.popleft()
+		visited[x][y][keys] = True
+		for d in dirs:
+			nx, ny = x + d[0], y + d[1]
+			if isSafe(nx, ny, keys) and not visited[nx][ny][keys]:
+				visited[nx][ny][keys] = True
+				# 注意需要额外设置一个变量，处理上下左右四个方向出现多个钥匙的情况
+				_keys = keys   
+				if 'a' <= grid[nx][ny] <= 'f':
+					_keys |= 1 << (ord(grid[nx][ny]) - ord("a"))
+					if _keys == k:
+						return steps + 1
+				queue.append((nx, ny, _keys, steps+1))
+	return -1
+
+```
 
 
 ## 贪心算法
